# blender-android-3.6

./: .gitignore  build.gradle  copy_sos.sh  settings.gradle
.github/workflows/: build-apk.yml
OBlender/app/src/main/cpp/: CMakeLists.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/creator/: buildinfo.c  creator.cc  creator_signals.cc  stubs.cc
app/src/main/java/com/blender/android/: InstallAppFiles.java  MainActivity.java  StartupActivity.java
app/src/main/res/layout/: activity_startup.xml
app/src/main/res/values/: strings.xml  themes.xml
